web/bundles/muzichcore/css/main.css
/* ... */
.error, .fos_user_error
{
		 background-color: #de4343;
		 border-color: #c43d3d;
}
		 
.warning, .fos_user_warning
{
		 background-color: #eaaf51;
		 border-color: #d99a36;
}

.success, .fos_user_success
{
		 background-color: #61b832;
		 border-color: #55a12c;
}

.message h3
{
		 margin: 0 0 5px 0;													 
}

.message p
{
		 margin: 0;													 
}

.message a.message-close
{
  float: right;
  margin-top: -14px;
  margin-right: 18px;
  margin-bottom: -11px;
}

.message a.message-close img:HOVER
{
  width: 52px;
  height: 52px;
  margin-bottom: -13px;
}

@-webkit-keyframes animate-bg
{
    from {
        background-position: 0 0;
    }
    to {
       background-position: -80px 0;
    }
}


@-moz-keyframes animate-bg 
{
    from {
        background-position: 0 0;
    }
    to {
       background-position: -80px 0;
    }
}

/* Message flash end */

#choose_language
{
  float: right;
  margin-right: 5px;
}

#choose_language a
{
  text-decoration: none;
  color: black;
}

.error_list
{
  font-size: 87%;
  color: #dd0101;
  
  margin-left: 24px;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-right: 2px;
}

.error_list li
{
  list-style: url(/bundles/muzichcore/img/1323874685_warning.png);
}


/*  Debut CSS pour tags */

pre code {background: #ccc; padding:2px 0; display: block; margin-top:4px;}
.ui-autocomplete {
font-size:12px;
border:1px solid #ddd;
background:#fff;
list-style:none;
position: absolute;
cursor: default;
list-style-type: none;
width: 300px;
}
.ui-autocomplete li {margin-right:8px; float: left;}
.ui-autocomplete li a {display:block; padding:4px;}
.ui-autocomplete li a.ui-state-hover,
.ui-autocomplete li a:hover {background:#eee;} 

/**/

ul.tagbox {
background: #fff;
cursor: text;
border: none;
overflow: hidden;
padding: 0 0 1px 3px;
margin-left: 0px;
}
ul.tagbox li {
margin:0;
}

ul.tagbox li.tag {
  
float: left;
line-height: 1;
list-style-type: none;
margin-top: 3px;
margin-right: 3px;

font-size:13px;
border: 1px solid #cad8f3;
background: #dee7f8;
margin-bottom: 1px;
position: relative;

  display: inline-block;
  
  padding-left: 7px;
  padding-top: 4px;
  padding-right: 14px;
  padding-bottom: 4px;
  
	text-decoration: none;
	font-weight: bold;
	color: #fff;
	background-color: #39c;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	-khtml-border-radius: 5px;
	border-radius: 5px;
}
ul.tagbox li.input {display:block; float:left;}
ul.tagbox input:focus {
border-color: #fff;
}
ul.tagbox input {
width: 50px;
margin: 0;
border: 0;
outline: 0;
line-height:1.2;
padding: 3px 0;
font-size:12px;
}
ul.tagbox a.close {
position: absolute;
right: 4px; top: 5px;
display: block;
text-indent:-9999px;
cursor:pointer;
width: 7px; height: 7px;
font-size: 1px;
background: url('/bundles/muzichcore/img/tag_close.gif');
background-position: 0px 100%;
margin-top: 2px;
}
ul.tagbox a.close:hover {
background-position: 7px;
} 


/* Fin CSS pour tags */

/* Debut CSS pour elements */

li.element
{
  list-style: none outside none;
  margin-top: 5px;
  margin-bottom: 5px;
  padding: 5px;
}

li.element a.favorite_link
{
  position: relative;
  top: 0px;
  left: 483px;
}

li.element a.element_open
{
  font-weight: bold;
  margin-top: 7px;
}

li.element div.element_embed
{
  text-align: center;
}

li.element td.element_content
{
  vertical-align: top;
  padding-left: 5px;
}

li.element span.element_name
{
  margin-left: -20px;
}

li.element td.element_thumbnail
{
  background-image: url(/bundles/muzichcore/img/nothumb.png);
  width: 120px;
  height: 90px;
}

li.element img.element_thumbnail
{
  width: 120px;
  height: 90px;
}

#container li.element span.element_name a
{
  color: black;
}

li.element img.play, li.element img.open
{
  position: absolute;
  
}

ul.elements
{
  margin-left: 0px;
}

ul.elements li.even
{
  background-color: #d9f7ff;
}

.elements ul.element_tags
{
  margin-top: 3px;
  margin-left: 0px;
}
  
.elements ul.element_tags li
{
  display: inline;
  font-size: 90%;
}

ul.element_tags .button
{
  padding: 2px 4px 2px 4px;
  font-size: 95%;
}


/* FIN CSS pour elements */

span.help
{
  font-size: 10px;
  padding-left: 18px;
  background-image: url(/bundles/muzichcore/img/1325329213_system-help.png);
  background-repeat: no-repeat;
  background-position: left top;
}

span.sinfo
{
  font-size: 10px;
  padding-left: 18px;
  background-image: url(/bundles/muzichcore/img/1326549580_info.png);
  background-repeat: no-repeat;
  background-position: left top;
}

#bottomContainer a
{
  text-decoration: none;
  color: black;
}

#bottomContainer
{
  padding: 2px;
  
  font-size: 85%;
  text-align: center;
}

input.main
{
  font-weight: bold;
}

input.clear, input.mytags
{
  font-size: 80%;
}

ul.tagbox input[type="text"]
{
  -moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	-khtml-border-radius: 5px;
	border-radius: 5px;
  background-color: #bdf1fe;
  padding-left: 3px;
}

ul.tagbox li.input
{
  padding-top: 2px;
}

ul.tagbox input[type="text"]
{
  height: 14px;
  margin-top: 3px;
  width: 200px;
  color: #676767;
  font-weight: bold;
}

ul.tagbox input[type="text"]:FOCUS
{
  background-image: linear-gradient(left , rgb(137,232,253) 10%, rgb(168,238,255) 49%, rgb(189,241,254) 100%);
  background-image: -o-linear-gradient(left , rgb(137,232,253) 10%, rgb(168,238,255) 49%, rgb(189,241,254) 100%);
  background-image: -moz-linear-gradient(left , rgb(137,232,253) 10%, rgb(168,238,255) 49%, rgb(189,241,254) 100%);
  background-image: -webkit-linear-gradient(left , rgb(137,232,253) 10%, rgb(168,238,255) 49%, rgb(189,241,254) 100%);
  background-image: -ms-linear-gradient(left , rgb(137,232,253) 10%, rgb(168,238,255) 49%, rgb(189,241,254) 100%);

  background-image: -webkit-gradient(
    linear,
    left bottom,
    right bottom,
    color-stop(0.1, rgb(137,232,253)),
    color-stop(0.49, rgb(168,238,255)),
    color-stop(1, rgb(189,241,254))
  );
}

div.tag_loader_div, div.loader
{
  text-align: center;
}
/* ... */

